--- a/templates/admin/client_list.html.twig
+++ b/templates/admin/client_list.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container administration mt-5">
+	<div class="container administration">
 		<h1>Liste des Clients</h1>
 
 		<form method="get" class="mb-3">
