--- a/templates/admin/subscription_new.html.twig
+++ b/templates/admin/subscription_new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container clients-new-subscription">
 		<div class="card shadow-sm">
 			<h1>Sélectionner un forfait pour l'utilisateur</h1>
 			<div
