--- a/templates/admin/user_subscriptions.html.twig
+++ b/templates/admin/user_subscriptions.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
-		<div class="card shadow-sm">
+	<div class="container clients-credits">
+		<div>
 			<h1>Crédits pour chaque cours</h1>
 			<table class="table mb-0">
 				<thead>
