--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 		</head>
 		<body>
 			<div class="global d-flex flex-column">
-				<nav class="navbar navbar-expand-md navbar-light bg-white">
+				<nav class="navbar navbar-expand-xxl navbar-light bg-white">
 					<div class="container-fluid">
 						<a class="navbar-brand" href="/">
 							<img class="logo-img" src="{{ asset('images/logo2.jpg') }}" alt="AirStudio73">
@@ -34,17 +34,17 @@
 								<li class="nav-item">
 									<a class="nav-link" href="{{ path('coach_list') }}">Coach</a>
 								</li>
-								{# <li class="nav-item"> #}
-									{# <a class="nav-link" href="{{ path('course_details_list') }}">Activités</a> #}
-								{# </li> #}
-								{# <li class="nav-item"> #}
-									{# <a class="nav-link" href="{{ path('event_list') }}">Événements</a> #}
-								{# </li> #}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('course_details_list') }}">Cours</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('event_list') }}">Événements</a>
+								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="{{ path('planning') }}">Planning</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="{{ path('calendar') }}">Réservation</a>
+									<a class="nav-link" href="{{ path('calendar') }}">Réservations</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="/tarifs">Tarifs</a>
@@ -52,33 +52,44 @@
 								<li class="nav-item">
 									<a class="nav-link" href="{{ path('contact') }}">Contact</a>
 								</li>
-								{# <li class="nav-item"> #}
-									{# <a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a> #}
-								{# </li> #}
+								<li class="nav-item">
+									<a class="nav-link" href="{{ path('photo_gallery') }}">Galerie</a>
+								</li>
 
-								{% if is_granted('ROLE_ADMIN') %}
-									{# <li class="nav-item">
-										<a class="nav-link text-danger" href="{{ path('course_list') }}">Cours</a>
-									</li> #}
-									<li class="nav-item">
-										<a class="nav-link text-danger" href="{{ path('plan_list') }}">Forfaits</a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link text-danger" href="{{ path('admin_client_list') }}">Clients</a>
-									</li>
-								{% endif %}
+								{# {% if is_granted('ROLE_ADMIN') %}
+																									<li class="nav-item">
+																										<a class="nav-link text-danger" href="{{ path('plan_list') }}">Forfaits</a>
+																									</li>
+																									<li class="nav-item">
+																										<a class="nav-link text-danger" href="{{ path('admin_client_list') }}">Clients</a>
+																									</li>
+																								{% endif %} #}
 							</ul>
-							<ul class="navbar-nav">
+							<ul class="navbar-nav user">
 								{% if app.user %}
-									<li class="nav-item">
-										<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
+									<li class="nav-item dropdown">
+										<a href="#" class="nav-link dropdown-toggle" id="userMenu" role="button">
+											{{ app.user.firstName }}
+										</a>
+										<!-- Menu déroulant -->
+										<div class="dropdown-menu">
+											<a class="dropdown-item" href="{{ path('app_profile') }}">Mon profil</a>
+											<a class="dropdown-item" href="{{ path('user_subscription') }}">Mes forfaits</a>
+											<a class="dropdown-item" href="{{ path('booking_manage') }}">Mes réservations</a>
+											{% if is_granted('ROLE_ADMIN') %}
+												<a class="dropdown-item foradmin" href="{{ path('plan_list') }}">Gérer les forfaits</a>
+												<a class="dropdown-item foradmin" href="{{ path('admin_client_list') }}">Gérer les clients</a>
+											{% endif %}
+											<a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a>
+										</div>
 									</li>
 								{% else %}
 									<li class="nav-item">
-										<a class="nav-link" href="{{ path('app_login') }}">Se connecter</a>
+										<a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
 									</li>
 								{% endif %}
 							</ul>
+
 						</div>
 					</div>
 				</nav>
@@ -103,20 +114,24 @@
 						<ul>
 							<li><a href="{{path('reglement_interieur')}}">Règlement Intérieur</a></li>
 							<li><a href="{{path('nos_cgv')}}">Nos CGV</a></li>
+							<li><a href="{{asset('uploads/formulaire_inscription.docx')}}" download="Formulaire_Inscription">Formulaire d'inscription</a></li>
 						</ul>
 					</nav>
 					<p class="text-center">©2024 Tous droits réservés. AirStudio73 - Powered by Samuel MÉLINE</p>
 				</footer>
-			</div>
+			</body>
+		</body>
+	</html>
+</div>
 
-			<!-- Bootstrap JS -->
-			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-			<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-			<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-			{% block javascripts %}
-				<script>
-					// Afficher le bouton lorsque l'utilisateur fait défiler vers le bas
+<!-- Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+{% block javascripts %}
+	<script>
+		// Afficher le bouton lorsque l'utilisateur fait défiler vers le bas
 window.onscroll = function () {
 var backToTopButton = document.getElementById("back-to-top");
 if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
@@ -131,7 +146,5 @@ document.getElementById("back-to-top").addEventListener("click", function (event
 event.preventDefault();
 window.scrollTo({top: 0, behavior: "smooth"});
 });
-				</script>
-			{% endblock %}
-		</body>
-	</html>
+	</script>
+{% endblock %}</body></html>
