--- a/templates/course/new.html.twig
+++ b/templates/course/new.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container mt-5">
-		<div class="col-md-12 w-50 mx-auto">
+	<div class="container new-courses">
+		<div class="col-md-12 mx-auto">
 			<div class="card">
 				<div class="card-body">
 					<h1 class="mb-4">Créer un nouveau cours</h1>
