--- a/templates/event/list.html.twig
+++ b/templates/event/list.html.twig
@@ -1,36 +1,46 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste des Événements{% endblock %}
+{% block title %}Liste des Événements
+{% endblock %}
 
 {% block body %}
-<div class="container">
-    <h1>Liste des Événements</h1>
-    {% if is_granted('ROLE_ADMIN') %}
-        <a href="{{ path('event_new') }}" class="btn btn-primary mb-3">Créer un événement</a>
-    {% endif %}
-    <div class="row">
-        {% for event in events %}
-            <div class="col-md-4 mb-3">
-                <div class="card">
-                    {% if event.photo %}
-                        <img src="{{ asset('uploads/photos/' ~ event.photo) }}" class="card-img-top" alt="{{ event.title }}">
-                    {% endif %}
-                    <div class="card-body">
-                        <h5 class="card-title">{{ event.title }}</h5>
-                        <p class="card-text"><strong>Lieu:</strong> {{ event.location }}</p>
-                        <p class="card-text"><strong>Début:</strong> {{ event.startTime|date('d/m/Y H:i') }}</p>
-                        <p class="card-text"><strong>Fin:</strong> {{ event.endTime|date('d/m/Y H:i') }}</p>
-                        <p class="card-text"><strong>Description :</strong> {{ event.description }}</p>
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <a href="{{ path('event_edit', {'id': event.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
-                            <a href="{{ path('event_delete', {'id': event.id}) }}" class="btn btn-danger btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet événement ?');">Supprimer</a>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
-        {% else %}
-            <p>Aucun événement disponible pour le moment.</p>
-        {% endfor %}
-    </div>
-</div>
+	<div class="container list-events">
+		<h1>Liste des Événements</h1>
+		{% if is_granted('ROLE_ADMIN') %}
+			<a href="{{ path('event_new') }}" class="btn btn-general mb-3">Créer un événement</a>
+		{% endif %}
+		<div class="row">
+			{% for event in events %}
+				<div class="col-md-4 mb-3">
+					<div class="card">
+						{% if event.photo %}
+							<img src="{{ asset('uploads/photos/' ~ event.photo) }}" class="card-img-top" alt="{{ event.title }}">
+						{% endif %}
+						<div class="card-body">
+							<h5 class="card-title">{{ event.title }}</h5>
+							<p class="card-text">
+								<strong>Lieu:</strong>
+								{{ event.location }}</p>
+							<p class="card-text">
+								<strong>Début:</strong>
+								{{ event.startTime|date('d/m/Y H:i') }}</p>
+							<p class="card-text">
+								<strong>Fin:</strong>
+								{{ event.endTime|date('d/m/Y H:i') }}</p>
+							<p class="card-text">
+								<strong>Description :</strong>
+								{{ event.description }}</p>
+							{% if is_granted('ROLE_ADMIN') %}
+								<a href="{{ path('event_edit', {'id': event.id}) }}" class="btn update btn-sm">Modifier</a>
+								<a href="{{ path('event_delete', {'id': event.id}) }}" class="btn complet btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cet événement ?');">Supprimer</a>
+							{% endif %}
+						</div>
+					</div>
+				</div>
+			{% else %}
+				<p class="aucun-dispo">Aucun événement disponible pour le moment.</p>
+			{% endfor %}
+		</div>
+
+	</div>
 {% endblock %}
