--- a/templates/plan/list.html.twig
+++ b/templates/plan/list.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container mt-3">
+	<div class="container mt-3 list-plans">
 		<div class="col-md-9 mx-auto">
 			<div class="card">
 				<div class="card-body">
