--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -71,8 +71,8 @@
 													{{ schedule.endTime|date('H:i') }})
 													{% if is_granted('ROLE_ADMIN') %}
 														<br>
-														<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn btn-secondary btn-sm mt-1">Modifier</a>
-														<a href="{{ path('planning_delete', {id: schedule.id}) }}" class="btn btn-danger btn-sm mt-1" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette session ?');">Supprimer</a>
+														<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn update btn-sm mt-1">Modifier</a>
+														<a href="{{ path('planning_delete', {id: schedule.id}) }}" class="btn complet btn-sm mt-1" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette session ?');">Supprimer</a>
 													{% endif %}
 												</td>
 												{% set course_found = true %}
@@ -139,8 +139,8 @@
 												{{ schedule.endTime|date('H:i') }})
 												{% if is_granted('ROLE_ADMIN') %}
 													<br>
-													<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn btn-secondary btn-sm">Modifier</a>
-													<a href="{{ path('planning_delete', {id: schedule.id}) }}" class="btn btn-danger btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette session ?');">Supprimer</a>
+													<a href="{{ path('planning_edit', {id: schedule.id}) }}" class="btn update btn-sm">Modifier</a>
+													<a href="{{ path('planning_delete', {id: schedule.id}) }}" class="btn complet btn-sm" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette session ?');">Supprimer</a>
 												{% endif %}
 											</td>
 											{% set course_found = true %}
