--- a/templates/subscription/new.html.twig
+++ b/templates/subscription/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container new-subscription">
 		<div class="card shadow-sm">
 			<h1>Sélectionner votre forfait</h1>
 			<div
@@ -46,6 +46,9 @@
 				<!-- Nombre de paiements -->
 				{% if form.paymentInstallments is defined %}
 					<div class="form-group">
+						<p class="alert alert-info mt-3">
+							Si vous optez pour un paiement mensuel, les prélèvements s'arrêteront au plus tard en juillet 2025 ou plus tôt si vous atteignez les 10 mensualités. Par exemple, un forfait acheté en juillet 2024 aura un dernier prélèvement en avril 2025.
+						</p>
 						{{ form_label(form.paymentInstallments, null, {'label_attr': {'class': 'form-label'}}) }}
 						{{ form_widget(form.paymentInstallments, {'attr': {'class': 'form-control'}}) }}
 					</div>
@@ -61,7 +64,7 @@
 				{{ form_rest(form) }}
 
 				<!-- Bouton de soumission -->
-				<button type="submit" class="btn btn-general mt-2">Réserver et payer</button>
+				<button type="submit" class="btn btn-general mt-2">Payer</button>
 
 				{{ form_end(form) }}
 
@@ -90,6 +93,27 @@ body: JSON.stringify(
 if (data.warning) { // Affiche l'alerte si le forfait est proche de l'expiration
 alert(data.warning);
 }
+});
+}
+
+function fetchAndAlertCredits(planId) { // Envoie une requête AJAX pour récupérer les crédits restants
+fetch('{{ path('fetch_remaining_credits') }}', {
+method: 'POST',
+headers: {
+'Content-Type': 'application/json',
+'X-CSRF-Token': '{{ csrf_token('fetch_remaining_credits') }}'
+},
+body: JSON.stringify(
+{planId: planId}
+)
+}).then(response => response.json()).then(data => {
+if (data.remainingCredits) { // Afficher une alerte avec les crédits restants
+alert('Crédits restants pour ce forfait : ' + data.remainingCredits);
+} else if (data.error) {
+alert('Erreur : ' + data.error);
+}
+}).catch(error => {
+console.error('Erreur lors de la récupération des crédits restants:', error);
 });
 }
 	</script>
