--- a/templates/user/subscription.html.twig
+++ b/templates/user/subscription.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<div class="container">
+	<div class="container subscription">
 		<h1>Mes Forfaits</h1>
 		<div class="list-group">
 			{% set allSubscriptionsEmpty = true %}
