--- a/templates/subscription/new.html.twig
+++ b/templates/subscription/new.html.twig
@@ -96,25 +96,25 @@ alert(data.warning);
 });
 }
 
-function fetchAndAlertCredits(planId) { // Envoie une requête AJAX pour récupérer les crédits restants
-fetch('{{ path('fetch_remaining_credits') }}', {
-method: 'POST',
-headers: {
-'Content-Type': 'application/json',
-'X-CSRF-Token': '{{ csrf_token('fetch_remaining_credits') }}'
-},
-body: JSON.stringify(
-{planId: planId}
-)
-}).then(response => response.json()).then(data => {
-if (data.remainingCredits) { // Afficher une alerte avec les crédits restants
-alert('Crédits restants pour ce forfait : ' + data.remainingCredits);
-} else if (data.error) {
-alert('Erreur : ' + data.error);
-}
-}).catch(error => {
-console.error('Erreur lors de la récupération des crédits restants:', error);
-});
-}
+// function fetchAndAlertCredits(planId) { // Envoie une requête AJAX pour récupérer les crédits restants
+// fetch('{{ path('fetch_remaining_credits') }}', {
+// method: 'POST',
+// headers: {
+// 'Content-Type': 'application/json',
+// 'X-CSRF-Token': '{{ csrf_token('fetch_remaining_credits') }}'
+// },
+// body: JSON.stringify(
+// {planId: planId}
+// )
+// }).then(response => response.json()).then(data => {
+// if (data.remainingCredits) { // Afficher une alerte avec les crédits restants
+// alert('Crédits restants pour ce forfait : ' + data.remainingCredits);
+// } else if (data.error) {
+// alert('Erreur : ' + data.error);
+// }
+// }).catch(error => {
+// console.error('Erreur lors de la récupération des crédits restants:', error);
+// });
+// }
 	</script>
 {% endblock %}
